--- a/snakeway-core/config-templates/routes/assets.toml
+++ b/snakeway-core/config-templates/routes/assets.toml
@@ -1,5 +1,9 @@
 [[route]]
+# URL path prefix for serving static files (e.g., /assets/style.css).
 path = "/assets"
+# Local directory containing the files to serve.
 file_dir = "./public"
+# Default file to serve when a directory is requested.
 index = "index.html"
+# Whether to show directory contents when no index file exists.
 directory_listing = false
