--- a/snakeway-core/config-templates/devices/identity.toml
+++ b/snakeway-core/config-templates/devices/identity.toml
@@ -1,6 +1,14 @@
 [[device]]
+# The unique name identifier for this device.
 name = "identity"
+# The type of device, indicating it's a builtin device.
 type = "builtin"
+# The specific builtin device implementation to use.
 builtin = "identity"
+# Whether this device is enabled and active.
 enabled = true
+# Device-specific configuration options.
+# enable_geoip: Enables or disables GeoIP lookup for client IP addresses.
+# trusted_proxies: A list of trusted proxy IP addresses or CIDR ranges.
+# ua_engine: The user agent parser engine to use (woothee or uaparser).
 config = { enable_geoip = false, trusted_proxies = [], ua_engine = "woothee" }
