--- a/snakeway-core/config-templates/snakeway.toml
+++ b/snakeway-core/config-templates/snakeway.toml
@@ -1,15 +1,20 @@
 [server]
 version = 1
-threads = 4
+# Pid is optional, but necessary for the snakeway reload command.
 pid_file = "/tmp/snakeway.pid"
+# The number of worker threads for handling requests.
+# If unset, Pingora decides how many threads to use.
+threads = 8
 
 [[listener]]
 addr = "127.0.0.1:8080"
 
 [[listener]]
 addr = "127.0.0.1:8443"
+# TLS configuration with paths to certificate and private key files.
 tls = { cert = "./path/to/tls_cert.pem", key = "./path/to/tls_cert.key" }
 
+# Modular inclusion for routes, services, and devices.
 [include]
 routes = "routes/*.toml"
 services = "services/*.toml"
