Update comments in `snakeway.toml` and `api.toml` config templates for clarity

--- a/snakeway-core/config-templates/services/api.toml
+++ b/snakeway-core/config-templates/services/api.toml
@@ -8,7 +8,6 @@ strategy = "round_robin"
 # The URL of the upstream server to forward requests to.
 url = "http://127.0.0.1:3000"
 
-# Additional upstream server configuration.
-#[[service.upstream]]
-# The URL of an alternative upstream server.
-#url = "http://127.0.0.1:3001"
+# An additional upstream server configuration.
+# [[service.upstream]]
+# url = "http://127.0.0.1:3001"
