--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -9,4 +9,13 @@ reqwest = { version = "0.12", features = ["blocking"] }
 snakeway-core = { version = "*", path = "../snakeway-core", features = ["wasm", "static_files"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-tempfile = "3.23.0"
+tonic = "0.14.2"
+tokio-tungstenite = "0.28.0"
+futures-util = "0.3.31"
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+prost = "0.14"
+tonic-prost = "0.14"
+
+[build-dependencies]
+tonic-prost-build = "0.14"
+
