--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -15,6 +15,7 @@ futures-util = "0.3.31"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 prost = "0.14"
 tonic-prost = "0.14"
+url = "2.5.7"
 
 [build-dependencies]
 tonic-prost-build = "0.14"
