--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,3 +49,8 @@ wasmtime = "39.0"
 wasmtime-wasi = "39"
 wit-bindgen = "0.49"
 rust-embed = "8.9"
+woothee = "0.13"
+ipnet = "2.11"
+thiserror = "2.0"
+glob = "0.3"
+serde_yaml = "0.9"
