--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -55,8 +55,8 @@ tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"
 uaparser = { workspace = true }
 wasmtime = { workspace = true, optional = true }
 wasmtime-wasi = { workspace = true, optional = true, features = ["default"] }
-woothee = "0.13.0"
-ipnet = "2.11.0"
-thiserror = "2.0.17"
-glob = "0.3.3"
-serde_yaml = "0.8.26"
+woothee = { workspace = true }
+ipnet = { workspace = true }
+thiserror = { workspace = true }
+glob = { workspace = true }
+serde_yaml = { workspace = true }
