--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -60,3 +60,4 @@ ipnet = { workspace = true }
 thiserror = { workspace = true }
 glob = { workspace = true }
 serde_yaml = { workspace = true }
+once_cell = "1.21.3"
