Replace `Hash` with `StickyHash` across traffic management logic and update dependencies

--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -60,4 +60,6 @@ ipnet = { workspace = true }
 thiserror = { workspace = true }
 glob = { workspace = true }
 serde_yaml = { workspace = true }
-once_cell = "1.21.3"
+once_cell = { workspace = true }
+rand = { workspace = true }
+ahash = { workspace = true }
