Add per-upstream active request tracking in `TrafficManager`

--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -63,3 +63,4 @@ serde_yaml = { workspace = true }
 once_cell = { workspace = true }
 rand = { workspace = true }
 ahash = { workspace = true }
+dashmap = { workspace = true }
