Feature/traffic intelligence (#8)
* Implement round-robin load balancing strategy with core traffic types and abstractions

* Add some tests for TrafficDirector

* WIP traffic management algorithms

* WIP traffic intelligence

* Integrate `TrafficManager` into test harness

* Wire-up TrafficSnapshot with RuntimeState

* Update `TrafficManager` initialization to use runtime-aware `TrafficSnapshot`

* Implement random traffic decision logic

* Implement other traffic algos

* Replace `Hash` with `StickyHash` across traffic management logic and update dependencies

* Add per-upstream active request tracking in `TrafficManager`

* Rename `Strategy` to `LoadBalancingStrategy` across traffic management codebase

* Convert `TrafficManager` to `Arc` for shared ownership and enhance snapshot rebuild logic

* Rename `hash` to `sticky_hash` in traffic algorithms module and update references

* Refactor `StickyHash` with deterministic hashing, stickiness resolution, and rendezvous logic

* Remove `rebuild_snapshot` from `TrafficManager` and simplify snapshot update logic

* Refactor `TrafficStrategy` to accept `TrafficManager` and `ServiceId`, remove unused `connections` from `UpstreamSnapshot`

* Add per-service round-robin cursors to `TrafficManager` and cleanup RR cursors on reload

* Introduce `make_upstream_id` for deterministic `UpstreamId` generation and update usage in `UpstreamRuntime`

* Make `UpstreamId` `Ord` and `PartialOrd`; add deterministic tie-breaking in least-connections algorithm

* Replace custom construction of hashers with `hash_one` for simplified and consistent hashing across `runtime` and `sticky_hash` modules

* Add upstream health tracking to `TrafficManager` with failure handling and optimistic retry mechanism

* Remove `health` from `UpstreamSnapshot` and refactor related tests, streamline upstream data structure and runtime usage

* Add test for fallback handling when `TrafficStrategy` returns `None` in `director.rs`

* Refactor `HealthState` in `

--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -60,3 +60,7 @@ ipnet = { workspace = true }
 thiserror = { workspace = true }
 glob = { workspace = true }
 serde_yaml = { workspace = true }
+once_cell = { workspace = true }
+rand = { workspace = true }
+ahash = { workspace = true }
+dashmap = { workspace = true }
