--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,3 +54,7 @@ ipnet = "2.11"
 thiserror = "2.0"
 glob = "0.3"
 serde_yaml = "0.9"
+once_cell = "1.21.3"
+rand = "0.9"
+ahash = "0.8"
+dashmap = "7.0.0-rc2"
