Add chrono dependency and update README with Admin API link

--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -64,3 +64,4 @@ once_cell = { workspace = true }
 rand = { workspace = true }
 ahash = { workspace = true }
 dashmap = { workspace = true }
+chrono = { workspace = true }
