Improve error handling and validation for routes, listeners, and services.
 Includes stricter checks for static directories, upstream URLs, and listener configurations.

--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -65,3 +65,4 @@ rand = { workspace = true }
 ahash = { workspace = true }
 dashmap = { workspace = true }
 chrono = { workspace = true }
+url = { workspace = true }
