Add `plain` flag and enhance configuration error reporting
- Introduced `plain` flag for simplified error output in config check.
- Improved diagnostic messages using `miette` for better debugging.
- Updated error hinting with detailed contextual guidance.

--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -66,3 +66,4 @@ ahash = { workspace = true }
 dashmap = { workspace = true }
 chrono = { workspace = true }
 url = { workspace = true }
+miette = { workspace = true, features = ["fancy"] }
