Define `type` field for routes in example configurations
- Added `type` field to distinguish between `service` and `static` route types.
- Clarified comments for websockets, static file, and API routes for better readability.

--- a/snakeway-core/config-templates/routes/assets.toml
+++ b/snakeway-core/config-templates/routes/assets.toml
@@ -1,6 +1,8 @@
 [[route]]
 # URL path prefix for serving static files (e.g., /assets/style.css).
 path = "/assets"
+# This route points to a static file directory.
+type = "static"
 # Directory containing the files to serve.
 file_dir = "/var/www/html"
 # Default file to serve when a directory is requested.
