--- a/snakeway-core/config-templates/routes/ws.toml
+++ b/snakeway-core/config-templates/routes/ws.toml
@@ -1,6 +1,8 @@
 [[route]]
 path = "/ws"
+type = "service"
 service = "api"
+# Websockets enabled andconfigured...
 allow_websocket = true
 ws_idle_timeout_ms = 60_000
 ws_max_connections = 10_000
