Fix typo in WebSocket route configuration template comments

--- a/snakeway-core/config-templates/routes/ws.toml
+++ b/snakeway-core/config-templates/routes/ws.toml
@@ -2,7 +2,7 @@
 path = "/ws"
 type = "service"
 service = "api"
-# Websockets enabled andconfigured...
+# Websockets enabled and configure...
 allow_websocket = true
 ws_idle_timeout_ms = 60_000
 ws_max_connections = 10_000
