Modularize route configurations: separate `routes` into `routes_static` and `routes_service` directories, update init logic, and adjust `snakeway.toml` structure.

--- a/snakeway-core/config-templates/snakeway.toml
+++ b/snakeway-core/config-templates/snakeway.toml
@@ -18,6 +18,7 @@ addr = "127.0.0.1:8080"
 
 # Modular inclusion for routes, services, and devices.
 [include]
-routes = "routes/*.toml"
+routes_service = "routes_service/*.toml"
+routes_static = "routes_static/*.toml"
 services = "services/*.toml"
 devices = "devices/*.toml"
