Unify route configuration structure
- Replaced `routes_service` and `routes_static` directories with a single `routes` directory.
- Renamed `[[route]]` blocks to `[[service_route]]` and `[[static_route]]` for explicit route type separation.
- Updated configuration parsing to handle unified route structure.
- Adjusted documentation and examples to reflect these changes.
- Simpl

--- a/snakeway-core/config-templates/routes/assets.toml
+++ b/snakeway-core/config-templates/routes/assets.toml
@@ -1,4 +1,4 @@
-[[route]]
+[[static_route]]
 # URL path prefix for serving static files (e.g., /assets/style.css).
 path = "/assets"
 # This route points to a static file directory.
