--- a/snakeway-core/config-templates/snakeway.toml
+++ b/snakeway-core/config-templates/snakeway.toml
@@ -18,7 +18,6 @@ addr = "127.0.0.1:8080"
 
 # Modular inclusion for routes, services, and devices.
 [include]
-routes_service = "routes_service/*.toml"
-routes_static = "routes_static/*.toml"
+routes = "routes/*.toml"
 services = "services/*.toml"
 devices = "devices/*.toml"
