--- a/snakeway-core/config-templates/snakeway.toml
+++ b/snakeway-core/config-templates/snakeway.toml
@@ -18,6 +18,6 @@ addr = "127.0.0.1:8080"
 
 # Modular inclusion for routes, services, and devices.
 [include]
-routes = "routes/*.toml"
-services = "services/*.toml"
-devices = "devices/*.toml"
+routes = "routes.d/*.toml"
+services = "services.d/*.toml"
+devices = "devices.d/*.toml"
