Improve config validation (#13)
* Improve error handling and validation for routes, listeners, and services.

 Includes stricter checks for static directories, upstream URLs, and listener configurations.

* Set the example config file_dir to an absolute path

* Restructure and enhance documentation: add configuration and reloads guides, update navigation, and mark placeholders for future content.

* Refactor docs

* Refactor docs

* Expand config docs

* Cleanup landing page

* Refactor routes and improve validation logic.

- Renamed `RouteTarget` to `RouteKind` and `RouteKind` to `RouteRuntime` for clearer semantics.
- Enhanced error messages for configuration validation.
- Consolidated and streamlined route handling in the runtime and validators.

* Add `plain` flag and enhance configuration error reporting

- Introduced `plain` flag for simplified error output in config check.
- Improved diagnostic messages using `miette` for better debugging.
- Updated error hinting with detailed contextual guidance.

* Add `quiet` and `json` flags to configuration check

- Introduced `quiet` flag to suppress all output during config validation.
- Added `json` flag for machine-readable diagnostic output.
- Refactored error reporting logic with new `OutputMode` enum.

* Define `type` field for routes in example configurations

- Added `type` field to distinguish between `service` and `static` route types.
- Clarified comments for websockets, static file, and API routes for better readability.

* Refactor config check output handling

- Replaced `plain` and `json` flags with a unified `format` option (`pretty`, `plain`, `json`).
- Deprecated `OutputMode` enum in favor of `ConfigCheckOutputFormat`.
- Enhanced validation and error reporting logic.
- Added `FromStr` implementation for `ConfigCheckOutputFormat` to support CLI parsing.
- Updated documentation to reflect changes in route configuration.

* Fix typo in WebSocket route configuration template comments

* Update docs

* Refa

--- a/snakeway-core/config-templates/routes.d/api.toml
+++ b/snakeway-core/config-templates/routes.d/api.toml
@@ -1,5 +1,7 @@
-[[route]]
+[[service_route]]
 # The HTTP path prefix that this route will match.
 path = "/api"
+# This route points to a service.
+type = "service"
 # The name of the service that will handle requests to this route.
 service = "api"
