--- a/snakeway-core/config-templates/routes.d/assets.toml
+++ b/snakeway-core/config-templates/routes.d/assets.toml
@@ -1,8 +1,10 @@
-[[route]]
+[[static_route]]
 # URL path prefix for serving static files (e.g., /assets/style.css).
 path = "/assets"
-# Local directory containing the files to serve.
-file_dir = "./public"
+# This route points to a static file directory.
+type = "static"
+# Directory containing the files to serve.
+file_dir = "/var/www/html"
 # Default file to serve when a directory is requested.
 index = "index.html"
 # Whether to show directory contents when no index file exists.
