--- a/snakeway-core/config-templates/devices.d/structured_logging.toml
+++ b/snakeway-core/config-templates/devices.d/structured_logging.toml
@@ -1,12 +1,11 @@
-[[device]]
-# The unique name identifier for this device.
-name = "structured_logging"
-# The type of device, indicating it's a builtin device.
-type = "builtin"
-# The specific builtin device implementation to use.
-builtin = "structured_logging"
+[structured_logging_device]
 # Whether this device is enabled and active.
-enabled = true
-# Device-specific configuration options.
+enable = true
+
 # include_headers: Whether to include HTTP headers in the structured logs.
-config = { include_headers = false }
+include_headers = false
+
+# Logging level, e.g., error, info, warning
+level = "error"
+
+identity_fields = ["country", "region", "asn", "device", "bot"]
