Enhance config validation and output handling:
- Add warning reporting in `check` command with `quiet` and `json` format support.
- Refactor `trusted_proxies` validation for clarity and extend diagnostics.
- Update structured logging defaults: log level set to `info`, added `allowed_headers` and `redacted_headers`.
- Improve validation logic with `ValidationOutput` support and error/warning separation.
- Adjust `Device` loading to

--- a/snakeway-core/config-templates/devices.d/identity.toml
+++ b/snakeway-core/config-templates/devices.d/identity.toml
@@ -6,6 +6,8 @@ enable = true
 enable_geoip = false
 
 # A list of trusted proxy IP addresses or CIDR ranges.
+# Defines which intermediate servers are allowed to be believed when determining the real client IP from X-Forwarded-For.
+# To put it another way, if an IP is in trusted_proxies, Snakeway assumes it is allowed to lie on behalf of the client.
 trusted_proxies = []
 
 # Whether user agent parsing is enabled.
