Update integration test suite to accommodate new config changes

--- a/integration-tests/fixtures/config/identity_no_geo/routes/default.toml
+++ b/integration-tests/fixtures/config/identity_no_geo/routes/default.toml
@@ -1,9 +1,9 @@
-[[route]]
+[[service_route]]
 path = "/api"
 service = "api"
 
-[[route]]
+[[static_route]]
 path = "/"
-file_dir = "./public"
+file_dir = "/var/www/html"
 index = "index.html"
 directory_listing = false
