--- a/snakeway-core/config-templates/devices.d/structured_logging.toml
+++ b/snakeway-core/config-templates/devices.d/structured_logging.toml
@@ -1,12 +1,17 @@
-[[device]]
-# The unique name identifier for this device.
-name = "structured_logging"
-# The type of device, indicating it's a builtin device.
-type = "builtin"
-# The specific builtin device implementation to use.
-builtin = "structured_logging"
+[structured_logging_device]
 # Whether this device is enabled and active.
-enabled = true
-# Device-specific configuration options.
-# include_headers: Whether to include HTTP headers in the structured logs.
-config = { include_headers = false }
+enable = true
+
+# Whether to include HTTP headers in the structured logs.
+include_headers = false
+
+allowed_headers = []
+
+redacted_headers = []
+
+level = "info"
+
+# Whether to include identity information in the structured logs.
+include_identity = false
+
+identity_fields = ["country", "region", "asn", "device", "bot"]
