--- a/docs/package.json
+++ b/docs/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "docs",
+  "name": "docs-starlight",
   "type": "module",
-  "private": true,
+  "version": "0.0.1",
   "scripts": {
-    "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "vitepress": "^1.6.4"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
+  "dependencies": {
+    "@astrojs/starlight": "^0.37.1",
+    "astro": "^5.6.1",
+    "sharp": "^0.34.2"
   }
 }
