--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -39,7 +39,7 @@ percent-encoding = { workspace = true, optional = true }
 pingora = { workspace = true, features = ["proxy", "rustls"] }
 pingora-http = { workspace = true }
 rust-embed = { workspace = true }
-serde = { workspace = true }
+serde = { workspace = true, features = ["rc"] }
 serde_json = { workspace = true }
 toml = { workspace = true }
 tokio = { workspace = true, features = [
