--- a/integration-tests/fixtures/config/identity_no_geo/services/api.toml
+++ b/integration-tests/fixtures/config/identity_no_geo/services/api.toml
@@ -2,8 +2,8 @@
 name = "api"
 strategy = "round_robin"
 
-[[service.upstream]]
+[[service.tcp_upstream]]
 url = "http://127.0.0.1:9001"
 
-[[service.upstream]]
+[[service.tcp_upstream]]
 url = "http://127.0.0.1:9002"
