Attach `public_http` listener to routes and services in configuration templates:
- Add `listener = "public_http"` to `ws.toml`, `api.toml`, and `assets.toml`.
- Introduce `public_http` listener in `snakeway.toml`.

--- a/snakeway-core/config-templates/routes.d/api.toml
+++ b/snakeway-core/config-templates/routes.d/api.toml
@@ -5,3 +5,4 @@ path = "/api"
 type = "service"
 # The name of the service that will handle requests to this route.
 service = "api"
+listener = "public_http"
