--- a/snakeway-core/config-templates/routes.d/assets.toml
+++ b/snakeway-core/config-templates/routes.d/assets.toml
@@ -9,3 +9,4 @@ file_dir = "/var/www/html"
 index = "index.html"
 # Whether to show directory contents when no index file exists.
 directory_listing = false
+listener = "public_http"
