--- a/snakeway-core/config-templates/routes.d/ws.toml
+++ b/snakeway-core/config-templates/routes.d/ws.toml
@@ -5,3 +5,4 @@ service = "api"
 # Websockets enabled and configure...
 allow_websocket = true
 ws_max_connections = 10_000
+listener = "public_http"
