--- a/snakeway-core/config-templates/snakeway.toml
+++ b/snakeway-core/config-templates/snakeway.toml
@@ -6,20 +6,12 @@ pid_file = "/tmp/snakeway.pid"
 # If unset, Pingora decides how many threads to use.
 threads = 8
 # Root CA used by Pingora to verify upstream certificates.
-# ca_file = "./certs/ca.pem"
+# ca_file = "/path/to/certs/ca.pem"
 
-[[listener]]
-name = "public_http"
-addr = "127.0.0.1:8080"
-
-# A second listener with a TLS configuration for encryption.
-# [[listener]]
-# name = "public_https"
-# addr = "127.0.0.1:8443"
-# tls = { cert = "./path/to/tls_cert.pem", key = "./path/to/tls_cert.key" }
 
 # Modular inclusion for routes, services, and devices.
 [include]
 routes = "routes.d/*.toml"
 services = "services.d/*.toml"
 devices = "devices.d/*.toml"
+ingress = "ingress.d/*.toml"
