--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -67,3 +67,4 @@ dashmap = { workspace = true }
 chrono = { workspace = true }
 url = { workspace = true }
 miette = { workspace = true, features = ["fancy"] }
+hcl-rs = { workspace = true }
