--- a/snakeway-core/config-templates/ingress.d/api.toml
+++ b/snakeway-core/config-templates/ingress.d/api.toml
@@ -7,7 +7,7 @@ status = 301
 addr = "127.0.0.1:8443"
 tls = { cert = "./integration-tests/certs/server.pem", key = "./integration-tests/certs/server.key" }
 enable_http2 = true
-strategy = "round_robin"
+load_balancing_strategy = "round_robin"
 
 [[expose_service.route]]
 path = "/api"
