WIP refactor to error-less config validation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,5 +60,5 @@ ahash = "0.8"
 dashmap = "7.0.0-rc2"
 chrono = { version = "0.4", features = ["serde"] }
 url = "2"
-miette = { version = "7" }
-hcl-rs = "0.19.4"
+hcl-rs = "0.19"
+owo-colors = "4"
