--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -66,5 +66,6 @@ ahash = { workspace = true }
 dashmap = { workspace = true }
 chrono = { workspace = true }
 url = { workspace = true }
-miette = { workspace = true, features = ["fancy"] }
 hcl-rs = { workspace = true }
+owo-colors = { workspace = true }
+log = "0.4.29"
