Add unit tests for discover and scaffold out the other files

--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -68,4 +68,4 @@ chrono = { workspace = true }
 url = { workspace = true }
 hcl-rs = { workspace = true }
 owo-colors = { workspace = true }
-log = "0.4.29"
+tempfile = { workspace = true }
