--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,36 @@ jobs:
       - name: cargo clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
 
+  test:
+    name: Unit tests (nextest)
+    runs-on: ubuntu-latest
+    needs: lint
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install cargo-nextest
+        uses: taiki-e/install-action@nextest
+
+      - name: Cache cargo registry
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: cargo-test-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Run unit tests (snakeway-core)
+        run: |
+          cargo nextest run \
+            -p snakeway-core \
+            --features static_files,wasm
+
   build:
     name: Build static Linux binaries
     runs-on: ubuntu-latest
