--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,7 @@ jobs:
   build:
     name: Build static Linux binaries
     runs-on: ubuntu-latest
+    needs: test
     if: github.event_name != 'pull_request'
     strategy:
       fail-fast: false
