--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -69,3 +69,4 @@ url = { workspace = true }
 hcl-rs = { workspace = true }
 owo-colors = { workspace = true }
 tempfile = { workspace = true }
+pretty_assertions = { workspace = true }
