Add request ID tracking across core components and integrate UUID generation

--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -69,3 +69,4 @@ hcl-rs = { workspace = true }
 owo-colors = { workspace = true }
 tempfile = { workspace = true }
 pretty_assertions = { workspace = true }
+uuid = { workspace = true, features = ["v4"] }
