--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ serde_json = "1.0.145"
 tokio = "1.48.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+tracing-appender = "0.2"
 uaparser = "0.6"
 wasmtime = "39.0"
 wasmtime-wasi = "39"
