--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -51,6 +51,7 @@ tokio = { workspace = true, features = [
 ] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
+tracing-appender = { workspace = true }
 uaparser = { workspace = true }
 wasmtime = { workspace = true, optional = true }
 wasmtime-wasi = { workspace = true, optional = true, features = ["default"] }
