Feature/enhance "logs" command (#22)
* Fix config file name

* Formalize event model in logs command

* WIP add windowed stats to log command

* Update spoof script to match origin server expectations

* Refactor and simplify windowing

* Add request ID tracking across core components and integrate UUID generation

* Refine latency histogram rendering: improve label formatting and ensure non-zero bar display

* Add p95 and p99 latency metrics to log output and snapshot calculations

* Add basic identity tracking with bot and device metrics to logs and stats

* Prefix unused variables in render_stats with underscores

* Hydrate peer IP during request context initialization

* Expand GeoIP enrichment: add ASN, organization, and connection type; split GeoIP databases into city, ISP, and connection type files.

* Refactor log command: add modular modes (raw, pretty, stats), introduce stats rendering improvements, and enhance latency & identity tracking.

* Refactor to directory module

* Refactor logs command to full directory module

* Avoid subtle error where infinite errors cause infinite loop in log reader

* Refactor for simplicity

* Add `tracing-appender` for rolling file logging and update logging setup

* refactor

* Refactor GeoIP validation: introduce `validate_geoip_db_file` helper, update error handling, and add warning for missing GeoIP databases.

* Fix argument reference in `geoip_db_path_is_empty` function call during GeoIP validation

* Remove unused `url` dependency and rename `geoip_db` to `geoip_city_db` in test fixtures.

* Update GeoIP configuration docs: add support for City, ISP, and Connection Type databases.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ serde_json = "1.0.145"
 tokio = "1.48.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+tracing-appender = "0.2"
 uaparser = "0.6"
 wasmtime = "39.0"
 wasmtime-wasi = "39"
@@ -63,3 +64,4 @@ hcl-rs = "0.19"
 owo-colors = "4"
 tempfile = "3"
 pretty_assertions = "1"
+uuid = { version = "1.19.0" }
