--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -51,6 +51,7 @@ tokio = { workspace = true, features = [
 ] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
+tracing-appender = { workspace = true }
 uaparser = { workspace = true }
 wasmtime = { workspace = true, optional = true }
 wasmtime-wasi = { workspace = true, optional = true, features = ["default"] }
@@ -64,8 +65,8 @@ rand = { workspace = true }
 ahash = { workspace = true }
 dashmap = { workspace = true }
 chrono = { workspace = true }
-url = { workspace = true }
 hcl-rs = { workspace = true }
 owo-colors = { workspace = true }
 tempfile = { workspace = true }
 pretty_assertions = { workspace = true }
+uuid = { workspace = true, features = ["v4"] }
