--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -16,6 +16,7 @@ tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 prost = "0.14"
 tonic-prost = "0.14"
 url = "2.5.7"
+pretty_assertions = { workspace = true }
 
 [build-dependencies]
 tonic-prost-build = "0.14"
