--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -70,3 +70,4 @@ owo-colors = { workspace = true }
 tempfile = { workspace = true }
 pretty_assertions = { workspace = true }
 uuid = { workspace = true, features = ["v4"] }
+smallvec = { workspace = true }
