Make `bytes` non-optional in dependencies
The public gateway and request filter device now use Bytes, making it non-optional.

--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -12,7 +12,6 @@ wasm = [
 
 static_files = [
     "brotli",
-    "bytes",
     "flate2",
     "httpdate",
     "mime_guess",
@@ -25,7 +24,7 @@ anyhow = { workspace = true }
 async-trait = { workspace = true }
 arc-swap = { workspace = true }
 brotli = { workspace = true, optional = true }
-bytes = { workspace = true, optional = true }
+bytes = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 console-subscriber = { workspace = true }
 ctrlc = { workspace = true }
