Add builtin request filter device (#26)
* Sketch out request_filter

* Flesh out request_filter

Also, change how method_str is obtained.

* WIP - Add RequestFilterDevice to enable configurable request filtering

Integrates a flexible and configurable `RequestFilterDevice` into the device registry. Provides support for request filtering based on HTTP methods, headers, and size limits. Includes validation, specification, and runtime configuration for the new device.

* Move request filter ahead of WASM devices

* Enhance `RequestFilterDevice`: add method, header, and body size filtering with integration tests

* Add body size limit check to `RequestFilterDevice`

* Add `request_body_filter` to handle request streaming with error handling enhancements

Introduced a new hook, `request_body_filter`, to process streaming request bodies. Added handling for device errors and response scenarios with improved error logging for better debugging.

* Don't run DevicePipeline::on_stream_request_body for request that don't have a body

* Document new on_stream_request_body device hook

* Add `early_request_filter` for pre-filtering requests based on HTTP method and body presence

Introduces a new `early_request_filter` method to handle pre-request validation, ensuring correct method-body semantics before processing. Updates related logic in `request_body_filter` and aligns comments/documentation for additional clarity.

* Refactor method-body semantics in `RequestCtx` with additional checks

Renamed `can_have_body` to `has_defined_body_semantics` for clarity. Added new methods to handle body-related semantics: `method_forbids_body`, `body_is_suspicious_for_method`, and `body_presence_is_irrelevant`. Updated `RequestFilterDevice` logic to use the renamed method.

* Add `max_suspicious_body_bytes` support to `RequestFilterDevice`

Introduces a new configurable limit, `max_suspicious_body_bytes`, for handling requests with suspicious body semantics. Updates related structs, serializ

--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -12,7 +12,6 @@ wasm = [
 
 static_files = [
     "brotli",
-    "bytes",
     "flate2",
     "httpdate",
     "mime_guess",
@@ -25,7 +24,7 @@ anyhow = { workspace = true }
 async-trait = { workspace = true }
 arc-swap = { workspace = true }
 brotli = { workspace = true, optional = true }
-bytes = { workspace = true, optional = true }
+bytes = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 console-subscriber = { workspace = true }
 ctrlc = { workspace = true }
@@ -70,3 +69,4 @@ owo-colors = { workspace = true }
 tempfile = { workspace = true }
 pretty_assertions = { workspace = true }
 uuid = { workspace = true, features = ["v4"] }
+smallvec = { workspace = true }
